--- a/src/app/chess/chess.component.html
+++ b/src/app/chess/chess.component.html
@@ -1,1 +1,6 @@
 <p>chess works!</p>
+<div id="board1" style="width: 400px"></div>
+<br>
+<div id="board2" style="width: 400px"></div>
+<button id="startBtn">Start Position</button>
+<button id="clearBtn">Clear Board</button>
