--- a/src/app/basics/basics.component.html
+++ b/src/app/basics/basics.component.html
@@ -1,1 +1,8 @@
-<p>basics works!</p>
+<head>
+  <title>
+    this is a blank page title
+  </title>
+</head>
+<body>
+this is the body of the blank page
+</body>
