updated functions, chess reset works, counter works

--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -4,9 +4,10 @@
 </head>
 <body>
 <h1>People entered:</h1>
-<h2 id="count-el">0</h2>
-<button id="increment-btn" onclick="increment()">INCREMENT</button>
-<button id="save-btn" onclick="save()">SAVE</button>
+<h2>{{count}}</h2>
+<button id="increment-btn" (click)="increment()">INCREMENT</button>
+<button id="decrement-btn" (click)="decrement()">DECREMENT</button>
+<button id="save-btn" (click)="save()">SAVE</button>
 <script src="index.js"></script>
 </body>
 </html>
