--- a/src/app/counter/counter.component.css
+++ b/src/app/counter/counter.component.css
@@ -7,11 +7,13 @@ body {
 }
 
 h1 {
+  color: white;
   margin-top: 10px;
   margin-bottom: 10px;
 }
 
 h2 {
+  color: white;
   font-size: 50px;
   margin-top: 0;
   margin-bottom: 20px;
