--- a/src/app/blackjack/blackjack.component.html
+++ b/src/app/blackjack/blackjack.component.html
@@ -1,1 +1,13 @@
-<p>blackjack works!</p>
+<html>
+<head>
+<link href="blackjack.component.css" rel="stylesheet">
+</head>
+<body>
+<h1>Blackjack</h1>
+<p id="message-el">Want to play a round?</p>
+<p id="cards-el">Cards:</p>
+<p id="sum-el">Sum:</p>
+<button id="start-button" (click)="startGame()">START GAME</button>
+<script src="index.js"></script>
+</body>
+</html>
