an array of cards

--- a/src/app/blackjack/blackjack.component.css
+++ b/src/app/blackjack/blackjack.component.css
@@ -15,6 +15,19 @@ h1 {
   font-style: italic;
 }
 
+#newcard-button {
+  color: #016f32;
+  width: 150px;
+  background: goldenrod;
+  padding-top: 5px;
+  padding-bottom: 5px;
+  font-weight: bold;
+  border: none;
+  border-radius: 2px;
+  margin-bottom: 2px;
+  margin-top: 2px;
+}
+
 #start-button {
   color: #016f32;
   width: 150px;
@@ -24,4 +37,6 @@ h1 {
   font-weight: bold;
   border: none;
   border-radius: 2px;
+  margin-bottom: 2px;
+  margin-top: 2px;
 }
