--- a/src/app/blackjack/blackjack.component.html
+++ b/src/app/blackjack/blackjack.component.html
@@ -8,6 +8,8 @@
 <p id="cards-el">Cards:</p>
 <p id="sum-el">Sum:</p>
 <button id="start-button" (click)="startGame()">START GAME</button>
+<br>
+<button id="newcard-button" (click)="newCard()">NEW CARD</button>
 <script src="index.js"></script>
 </body>
 </html>
