--- a/src/app/blackjack/blackjack.component.html
+++ b/src/app/blackjack/blackjack.component.html
@@ -7,9 +7,10 @@
 <p id="message-el">Want to play a round?</p>
 <p id="cards-el">Cards:</p>
 <p id="sum-el">Sum:</p>
+<p id="greeting-el">Greeting:</p>
 <button id="start-button" (click)="startGame()">START GAME</button>
-<br>
 <button id="newcard-button" (click)="newCard()">NEW CARD</button>
+<p id="player-el"></p>
 <script src="index.js"></script>
 </body>
 </html>
