--- a/src/app/challenges/challenges.component.html
+++ b/src/app/challenges/challenges.component.html
@@ -1,1 +1,24 @@
 <p>challenges works!</p>
+<html>
+<head>
+  <link href="challenges.component.css" rel="stylesheet">
+</head>
+<body>
+<img src="images/shoe.jpeg" alt="Nike shoe">
+<p>Nike shoe</p>
+<button>Purchase - $149</button>
+<p id="error"></p>
+
+<span id="num1-el"></span>
+<span id="num2-el"></span>
+<br>
+<button (click)="add()">Add</button>
+<button (click)="subtract()">Subtract</button>
+<button (click)="division()">Divide</button>
+<button (click)="multiply()">Multiply</button>
+<br>
+<span id="sum-el">Sum: </span>
+
+<script src="index.js"></script>
+</body>
+</html>
