updated the first set of challenges

--- a/src/app/challenges1/challenges1.component.html
+++ b/src/app/challenges1/challenges1.component.html
@@ -1,7 +1,7 @@
-<p>challenges works!</p>
+<p>challenges1 works!</p>
 <html>
 <head>
-  <link href="challenges.component.css" rel="stylesheet">
+  <link href="challenges1.component.css" rel="stylesheet">
 </head>
 <body>
 <p>Nike shoe</p>
