--- a/src/app/blackjack/blackjack.component.css
+++ b/src/app/blackjack/blackjack.component.css
@@ -24,8 +24,7 @@ h1 {
   font-weight: bold;
   border: none;
   border-radius: 2px;
-  margin-bottom: 2px;
-  margin-top: 2px;
+  margin: 2px;
 }
 
 #start-button {
@@ -37,6 +36,5 @@ h1 {
   font-weight: bold;
   border: none;
   border-radius: 2px;
-  margin-bottom: 2px;
-  margin-top: 2px;
+  margin: 2px;
 }
