creating a chrome extension

--- a/src/app/chrome/chrome.component.html
+++ b/src/app/chrome/chrome.component.html
@@ -1,1 +1,11 @@
-<p>chrome works!</p>
+<html>
+<head>
+  <link href="chrome.component.css" rel="stylesheet">
+</head>
+<body>
+<input type="text" id="input-el">
+<button id="input-btn">SAVE INPUT</button>
+<ul id="ul-el"></ul>
+<script src="index.js"></script>
+</body>
+</html>
