--- a/src/app/chrome/chrome.component.html
+++ b/src/app/chrome/chrome.component.html
@@ -3,6 +3,7 @@
   <link href="chrome.component.css" rel="stylesheet">
 </head>
 <body>
+<a href="#">Home</a>
 <input type="text" id="input-el">
 <button id="input-btn">SAVE INPUT</button>
 <ul id="ul-el"></ul>
