--- a/src/app/fundamentals/fundamentals.component.css
+++ b/src/app/fundamentals/fundamentals.component.css
@@ -3,7 +3,11 @@
   color: white;
   width: 560px;
   margin: 0 auto;
-  padding: 50px;
+  padding: 45px;
+}
+
+h1, p {
+  margin-top: 0;
 }
 
 h1 {
@@ -15,5 +19,15 @@ p {
 }
 
 .links {
-  margin-top: 45px;
+  margin-top: 40px;
+  margin-bottom: 0;
+}
+
+strong {
+  background: yellow;
+  color: black;
+}
+
+.accent-color {
+  color: yellow;
 }
