--- a/src/app/fundamentals/fundamentals.component.css
+++ b/src/app/fundamentals/fundamentals.component.css
@@ -18,9 +18,42 @@ p {
   font-size: 18px;
 }
 
+a {
+  color: #FFE600;
+}
+
+.button {
+  display: inline-block;
+  background: #FFE600;
+  color: black;
+  padding: 15px 30px;
+  text-align: center;
+  margin-bottom: 50px;
+}
+
+.button:hover {
+  background: orange;
+}
+
+.accent-color {
+  color: #FFE600;
+}
+
 .links {
-  margin-top: 40px;
+  margin-top: 0;
   margin-bottom: 0;
+}
+
+#test {
+  color: fuchsia;
+}
+
+p {
+  color: pink;
+}
+
+.test {
+  color: lightblue;
 }
 
 strong {
@@ -28,7 +61,7 @@ strong {
   color: black;
 }
 
-.accent-color {
+a {
   color: #FFE600;
 }
 
@@ -50,4 +83,49 @@ a:hover {
 
 a:active {
   color: plum;
+}
+
+body {
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 48px;
+  color: #2e7ad3;
+  text-align: center;
+  margin: 45px 0;
+}
+
+h2 {
+  font-size: 32px;
+  color: #104c90;
+  margin: 0;
+  margin-bottom: 10px;
+}
+
+.blog-post {
+  background: #f1f1f1;
+  width: 450px;
+  padding: 25px;
+}
+
+a {
+  color: #ff8000;
+  font-weight: bold;
+}
+
+a:hover,
+a:focus {
+  color: #104c90;
+}
+
+.blog-post {
+  background: #f1f1f1;
+  width: 450px;
+  padding: 25px;
+  margin: 0 auto;
+}
+
+.read-more {
+  margin: 0;
 }
