--- a/src/app/fundamentals/fundamentals.component.html
+++ b/src/app/fundamentals/fundamentals.component.html
@@ -1,14 +1,24 @@
 <html>
 <head>
-  <link rel="stylesheet" href="css/style.css">
+  <link href="fundamentals.component.css" rel="stylesheet">
+  <title>An awesome blog</title>
 </head>
 <body>
 <div class="card">
   <h1>Nisl suscipit <span class="accent-color">adipiscing bibendum</span> est ultricies integer quis auctor.</h1>
   <p>Netus et malesuada fames ac. <a href="#">Sed cras ornare arcu dui vivamus</a>. <strong>Elementum integer enim neque</strong> volutpat ac tincidunt vitae semper.</p>
   <p class="links">
-    <a href="#">contact me</a> <a href="#">learn more about me</a>
+    <a class="button" href="#">contact me</a>
+    <a href="#" class="button">learn more about me</a>
   </p>
+</div>
+<h1>An awesome blog</h1>
+<div class="blog-post">
+  <h2>An awesome blog post</h2>
+  <img src="../../assets/chameleon.png" alt="a bright yellow window on a blue wall">
+  <p>At vero eos et <a href="#">accusam et justo duo</a> dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. </p>
+  <p>Lorem ipsum dolor sit amet, consetetur sadipscing elitr. Netus et malesuada fames ac. <a href="#">Sed cras ornare</a> arcu dui vivamus. Elementum integer enim neque volutpat ac tincidunt vitae semper.</p>
+  <p class="read-more"><a href="#">Read more...</a></p>
 </div>
 </body>
 </html>
