--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -1,1 +1,25 @@
-<p>carousel works!</p>
+<html>
+<head>
+  <link href="carousel.component.css" rel="stylesheet">
+</head>
+<body>
+  <div class="carousel">
+    <div class="carousel-item carousel-item-visible">
+      <img src="../../assets/1.jpg" />
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/2.jpg" />
+    </div>
+    <div class="carousel-item">
+      <img src="../../assets/3.jpg" />
+    </div>
+
+    <div class="carousel-actions">
+      <button id="carousel-button-prev" aria-label="Previous Slidex"><</button>
+      <button id="carousel-button-next" aria-label="Next Slide">></button>
+    </div>
+  </div>
+
+  <script src="index.pack.js"></script>
+  </body>
+</html>
