successfully completed snake game challenges

--- a/src/app/snake/snake.component.html
+++ b/src/app/snake/snake.component.html
@@ -1,1 +1,12 @@
-<p>snake works!</p>
+<html>
+<head>
+  <link href="snake.component.css" rel="stylesheet">
+</head>
+<body>
+<h1>Snake Game</h1>
+<button id="start">Start/Restart</button>
+<h2>Score <span id="score"></span></h2>
+<div class="grid"></div>
+<script src="index.pack.js"></script>
+</body>
+</html>
