updated responsive design

--- a/src/app/responsive2/responsive2.component.html
+++ b/src/app/responsive2/responsive2.component.html
@@ -3,14 +3,14 @@
 <head>
   <title>HTML & CSS Fundamentals | Challenges</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;900&display=swap" rel="stylesheet">
-  <link href="challenges4.component.css" rel="stylesheet">
+  <link href="responsive2.component.css" rel="stylesheet">
 </head>
 <body>
 
 <header class="inverse">
   <div class="container">
     <h1>Hello, my name is <span class="accent-text">Sophie</span></h1>
-    <img src="../../assets/3.jpg" alt="portrait of Sophie">
+    <img src="../../assets/1.jpg" alt="portrait of Sophie">
   </div>
 </header>
 
