--- a/src/app/responsive2/responsive2.component.css
+++ b/src/app/responsive2/responsive2.component.css
@@ -2,12 +2,6 @@ html {
   font-size: .9rem;
 }
 
-@media (min-width: 600px) {
-  html {
-    font-size: 1.3125rem;
-  }
-}
-
 body {
   text-align: center;
   font-family: 'Roboto', sans-serif;
@@ -19,6 +13,7 @@ body {
 .container {
   max-width: 570px;
   margin: 0 auto;
+  padding: 0 2em;
 }
 
 h1,
@@ -92,7 +87,13 @@ img {
 
 header,
 section {
-  padding: 6.25em 0;
+  padding: 3.25em 0;
+}
+
+header {
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
 }
 
 .inverse {
@@ -121,3 +122,77 @@ section {
   color: #fff;
 }
 
+@media (min-width: 600px) {
+  html {
+    /* font-size: 1.3125rem; */
+  }
+}
+
+@media (min-width: 750px) {
+  .splitter {
+    display: flex;
+    align-items: center;
+  }
+
+  /* section {
+      background: lightblue;
+  } */
+
+  .articles.inverse {
+    background: #99D930;
+    color: #252525;
+  }
+
+  .articles.inverse .accent-text,
+  .articles.inverse .name,
+  .articles.inverse time,
+  .articles.inverse a {
+    color: currentColor;
+  }
+
+  .articles.inverse a:hover,
+  .articles.inverse a:focus {
+    color: #fff;
+  }
+
+  .articles.inverse .btn {
+    color: #fff;
+    background-color: #252525;
+  }
+
+  .articles.inverse .btn:hover {
+    color: #252525;
+    background-color: #FFF;
+  }
+
+  .articles.inverse h2 {
+    border-color: currentColor;
+  }
+
+  .portfolio {
+    background: #252525;
+    color: #fff;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+  }
+
+  .portfolio .container {
+    max-width: 1200px;
+  }
+
+  .work {
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .portfolio-item {
+    width: 28%;
+  }
+
+  .portfolio-item img {
+    height: 15em;
+    width: 100%;
+    object-fit: cover;
+  }
+}
