--- a/src/app/responsive2/responsive2.component.css
+++ b/src/app/responsive2/responsive2.component.css
@@ -1,198 +1,287 @@
-html {
-  font-size: .9rem;
-}
+/*  Fonts
+-----
+font-family: 'Lora', serif;
+font-family: 'Ubuntu', sans-serif;
+*/
 
 body {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  font-weight: 300;
   margin: 0;
-  /* font-size: 1.75rem; */
-}
-
-.container {
-  max-width: 570px;
-  margin: 0 auto;
-  padding: 0 2em;
-}
-
-h1,
-h2 {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 1.125rem;
   font-weight: 300;
-}
-
-h1 {
-  font-size: 3.75rem;
-  margin-top: 0;
-}
-
-h2 {
-  font-size: 2.625rem;
-  margin-top: 0;
-  border-top: solid 1px #c4c4c4;
-  border-bottom: solid 1px #c4c4c4;
-  /* 2.625 x 16 = 42 */
-  /* 20 / 42 */
-  padding: .5em 0;
-  margin-bottom: .5em;
-}
-
-h3 {
-  font-size: 2.25rem;
-  font-weight: 900;
-  margin-bottom: 0;
-}
-
-.accent-text {
-  display: block;
-}
-
-h1 .accent-text {
-  font-size: 5rem;
-}
-
-h2 .accent-text {
-  font-size: 3.75rem;
-}
-
-.accent-text,
-.name,
-time {
-  font-weight: 900;
-  color: #99D930;
-}
-
-p {
-  margin-bottom: 0;
-}
-
-a {
-  color: #99D930;
-  font-weight: 900;
-}
-
-a:hover,
-a:focus {
-  color: #131313;
-}
-
-.small-text {
-  font-size: 1rem;
-  margin-top: .3125em;
+  line-height: 1.6;
 }
 
 img {
   max-width: 100%;
+  display: block;
 }
 
-header,
-section {
-  padding: 3.25em 0;
+.image-full {
+  max-height: 300px;
+  width: 100%;
+  object-fit: cover;
+  margin-bottom: 2em;
+}
+
+/* =================
+Typography
+================= */
+
+h1,
+h2,
+h3 {
+  font-family: 'Lora', serif;
+  font-weight: 400;
+  color: #143774;
+  margin-top: 0;
+}
+
+h1 {
+  font-size: 2rem;
+  margin: 0;
+}
+
+h3 {
+  color: #1792d2;
+}
+
+a {
+  color: #1792d2;
+}
+
+a:hover,
+a:focus {
+  color: #143774;
+}
+
+strong {
+  font-weight: 700;
+}
+
+/* h1 subtitle */
+.subtitle {
+  font-weight: 700;
+  color: #1792d2;
+  font-size: .75rem;
+  margin: 0;
+  text-transform: uppercase;
+}
+
+.article-title {
+  font-size: 1.5rem;
+}
+
+.article-read-more,
+.article-info {
+  font-size: .875rem;
+}
+
+.article-read-more {
+  color: #1792d2;
+  text-decoration: none;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+}
+
+.article-read-more:hover,
+.article-read-more:focus {
+  color: #143774;
+  text-decoration: underline;
+}
+
+.article-info {
+  margin: 2em 0;
+}
+
+.widget-title,
+.widget-recent-post-title {
+  font-size: 1rem;
+  line-height: 1.4;
+}
+
+.widget-title {
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 700;
+  letter-spacing: 2px;
+}
+
+.widget-recent-post-title {
+  color: #143774;
+}
+
+
+/* =================
+Layout
+================= */
+
+.container {
+  width: 90%;
+  max-width: 900px;
+  margin: 0 auto;
+}
+
+.container-flex {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 header {
-  min-height: 100vh;
+  background: #f8f8f8;
+  padding: 2em 0;
+  text-align: center;
+  margin-bottom: 3em;
+}
+
+footer {
+  background:#345480;
+  color: rgba(255,255,255, .65);
+  /* a = alpha */
+  /* alpha = opacity / transparency */
+  text-align: center;
+  padding: 3em 0;
+}
+
+@media (min-width: 675px) {
+  header {
+    text-align: left;
+  }
+
+  .container-flex {
+    flex-direction: row;
+  }
+
+  main {
+    width: 70%;
+  }
+
+  aside {
+    width: 25%;
+    min-width: 200px;
+    margin-left: 1em;
+  }
+}
+
+/* navigation */
+
+nav ul {
+  list-style: none;
+  padding: 0;
   display: flex;
-  align-items: center;
+  justify-content: center;
 }
 
-.inverse {
-  color: #fff;
-  background: #252525;
+nav li {
+  margin-left: 2em;
 }
 
-.inverse .btn:hover,
-.inverse .btn:focus {
-  background: #fff;
-  color: #252525;
-}
-
-.btn {
-  display: inline-block;
-  color: #252525;
+nav a {
   text-decoration: none;
-  background: #99D930;
-  padding: .625em 1.5625em;
-  margin-top: 1.5625em;
+  color: #707070;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  padding: .25em 0;
 }
 
-.btn:hover,
-.btn:focus {
-  background: #252525;
-  color: #fff;
+nav a:hover,
+nav a:focus {
+  color: #1792d2;
 }
 
-@media (min-width: 600px) {
-  html {
-    /* font-size: 1.3125rem; */
+.current-page {
+  border-bottom: 1px solid #707070;
+}
+
+.current-page:hover {
+  color: #707070;
+}
+
+@media (max-width: 675px) {
+  nav ul {
+    flex-direction: column;
+  }
+
+  nav li {
+    margin: .5em 0;
   }
 }
 
-@media (min-width: 750px) {
-  .splitter {
-    display: flex;
-    align-items: center;
-  }
+/* articles */
 
-  /* section {
-      background: lightblue;
-  } */
+.article-featured {
+  border-bottom: #707070 1px solid;
+  padding-bottom: 2em;
+  margin-bottom: 2em;
+}
 
-  .articles.inverse {
-    background: #99D930;
-    color: #252525;
-  }
+.article-recent {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+}
 
-  .articles.inverse .accent-text,
-  .articles.inverse .name,
-  .articles.inverse time,
-  .articles.inverse a {
-    color: currentColor;
-  }
+.article-recent-main {
+  order: 2;
+}
 
-  .articles.inverse a:hover,
-  .articles.inverse a:focus {
-    color: #fff;
-  }
+.article-recent-secondary {
+  order: 1;
+}
 
-  .articles.inverse .btn {
-    color: #fff;
-    background-color: #252525;
-  }
-
-  .articles.inverse .btn:hover {
-    color: #252525;
-    background-color: #FFF;
-  }
-
-  .articles.inverse h2 {
-    border-color: currentColor;
-  }
-
-  .portfolio {
-    background: #252525;
-    color: #fff;
-    min-height: 100vh;
-    display: flex;
-    align-items: center;
-  }
-
-  .portfolio .container {
-    max-width: 1200px;
-  }
-
-  .work {
-    display: flex;
+@media (min-width: 675px) {
+  .article-recent {
+    flex-direction: row;
     justify-content: space-between;
   }
 
-  .portfolio-item {
-    width: 28%;
+  .article-recent-main {
+    width: 68%;
   }
 
-  .portfolio-item img {
-    height: 15em;
-    width: 100%;
-    object-fit: cover;
+  .article-recent-secondary {
+    width: 30%;
   }
+
+  .article-featured {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .article-image {
+    order: -2;
+    min-height: 250px;
+    object-fit: cover;
+    /* object-position: left; */
+  }
+
+  .article-info {
+    order: -1;
+  }
+}
+
+/* widgets */
+
+.sidebar-widget {
+  border: 20px solid #efefef;
+  margin-bottom: 2em;
+  padding: 1em;
+}
+
+.widget-recent-post {
+  display: flex;
+  flex-direction: column;
+  border-bottom: 1px solid #707070;
+  margin-bottom: 1em;
+}
+
+.widget-recent-post:last-child {
+  border: 0;
+  margin: 0;
+}
+
+.widget-image {
+  order: -1;
 }
