--- a/src/app/bbq/bbq.component.html
+++ b/src/app/bbq/bbq.component.html
@@ -16,8 +16,25 @@
   <h2>Become a BBQ master! </h2>
   <p>Register Today</p>
   <p>BBQ isn't just standing in front of your grill with it on full blast and hoping for the best. It's an art! One way to speed up the process is to learn from the best. You can do just that by signing up for this free webinar!</p>
-  <!-- form will go here -->
+  <form class="email-collector" action="#" method="POST">
+    <input type="text" required placeholder="first name">
+    <input type="email" required  placeholder="email">
+    <button class="btn btn-primary" type="submit">Register</button>
+  </form>
   <p class="fine-print">We'll never share your information without your permission</p>
 </div>
+
+<h1>forms!</h1>
+<form action="#" method="post">
+  <label for="fname">First Name:</label>
+  <input id="fname" type="text" required placeholder="Enter your first name">
+  <br>
+  <label for="lname">Last Name:</label>
+  <input id="lname" type="text" required placeholder="Enter your last name">
+  <br>
+  <label for="email">Email:</label>
+  <input id="email" type="email" required placeholder="email">
+  <button type="submit">Send away!</button>
+</form>
 </body>
 </html>
