successfully completed the bbq module

--- a/src/app/bbq/bbq.component.css
+++ b/src/app/bbq/bbq.component.css
@@ -12,7 +12,6 @@ body {
   text-align: center;
 }
 
-
 /* =================
    Typography
    ================= */
@@ -46,10 +45,14 @@ h2 + p {
 
 .top-text {
   font-size: 0.625rem;
+  margin: 0;
+  padding-top: 2px;
   color: #F18119;
   font-weight: 900;
   text-transform: uppercase;
   order: -1;
+  border-top: 5px solid #F18119;
+  border-image: linear-gradient(to left, #ff713b, #ffa51d) 1;
 }
 
 .fine-print {
@@ -59,19 +62,22 @@ h2 + p {
 
 strong { font-weight: 900; }
 
-
 /* =================
    Intro section
    ================= */
 
 .intro {
-  background-image: url(../../assets/3.jpg);
+  background-image: url(../../assets/2.jpg), linear-gradient(45deg,red, blue);
+  /* background-color: #ff0000; */
+  background-blend-mode: screen;
   background-size: cover;
-  background-color: #404040;
   background-position: center;
   padding: 0 .5em 2em;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 50vh;
 }
-
 
 /* =================
    main-content section
@@ -79,6 +85,13 @@ strong { font-weight: 900; }
 
 .main-content {
   padding: 2em 1em;
+}
+
+.intro > *,
+.main-content > * {
+  max-width: 400px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .container {
@@ -114,6 +127,35 @@ input {
   margin-bottom: .75em;
   padding: .25em;
   border: 1px solid #404040;
+  transform: scale(1);
+  transition: transform 250ms;
+}
+
+input:focus {
+  transform: scale(1.1);
+}
+
+.btn {
+  display: inline-block;
+  padding: 1em 1.5em;
+  font-size: 0.625rem;
+  text-transform: uppercase;
+  font-weight: 900;
+  letter-spacing: 1px;
+  border: 0;
+  cursor: pointer;
+}
+
+.btn-primary {
+  background-image: linear-gradient(to left, #FF713B, #FFA51D);
+  color: white;
+  transform: scale(1);
+  transition: transform 250ms;
+}
+
+.btn-primary:hover,
+.btn-primary:focus {
+  transform: scale(1.1);
 }
 
 /* =================
