successfully completed pacman challenges

--- a/src/app/pacman/pacman.component.html
+++ b/src/app/pacman/pacman.component.html
@@ -1,1 +1,10 @@
-<p>pacman works!</p>
+<html>
+<head>
+  <link href="pacman.component.css" rel="stylesheet">
+</head>
+<body>
+<h3>Score:<span id="score"></span></h3>
+<div class="grid"></div>
+<script src="index.pack.js"></script>
+</body>
+</html>
