updated async await callback promises and war game

--- a/src/app/blackjack/blackjack.component.html
+++ b/src/app/blackjack/blackjack.component.html
@@ -11,6 +11,6 @@
 <button id="start-button" (click)="startGame()">START GAME</button>
 <button id="newcard-button" (click)="newCard()">NEW CARD</button>
 <p id="player-el"></p>
-<script src="index.js"></script>
+<script src="blackjack.component.ts"></script>
 </body>
 </html>
