--- a/src/app/challenges1/challenges1.component.html
+++ b/src/app/challenges1/challenges1.component.html
@@ -18,6 +18,6 @@
 <br>
 <span id="sum-el">Sum: </span>
 
-<script src="index.js"></script>
+<script src="challenges1.component.ts"></script>
 </body>
 </html>
