--- a/src/app/challenges2/challenges2.component.html
+++ b/src/app/challenges2/challenges2.component.html
@@ -4,6 +4,6 @@
   <link href="challenges2.component.css" rel="stylesheet">
 </head>
 <body>
-<script src="index.js"></script>
+<script src="challenges2.component.ts"></script>
 </body>
 </html>
