--- a/src/app/challenges3/challenges3.component.html
+++ b/src/app/challenges3/challenges3.component.html
@@ -13,6 +13,6 @@
   <img class="team-img" src="assets/blackjack.jpg">
   <img class="team-img" src="assets/chameleon.png">
 </div>
-<script src="index.js"></script>
+<script src="challenges3.component.ts"></script>
 </body>
 </html>
