--- a/src/app/counter/counter.component.html
+++ b/src/app/counter/counter.component.html
@@ -8,6 +8,6 @@
 <button id="increment-btn" (click)="increment()">INCREMENT</button>
 <button id="decrement-btn" (click)="decrement()">DECREMENT</button>
 <button id="save-btn" (click)="save()">SAVE</button>
-<script src="index.js"></script>
+<script src="counter.component.ts"></script>
 </body>
 </html>
