--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -19,7 +19,7 @@
 <!-- add a button with the text 'Contact Me 📨' and with an ID of 'open-modal' -->
 <button id="open-modal">Contact Me 📨</button>
 
-<script src="index.pack.js"></script>
+<script src="modal.component.ts"></script>
 </body>
 </html>
 
