--- a/src/app/responsive1/index.html
+++ b/src/app/responsive1/index.html
@@ -17,12 +17,11 @@
         <li><a href="recent-posts.html">Recent posts</a></li>
       </ul>
     </nav>
-  </div> <!-- / .container -->
+  </div>
 </header>
 
 <div class="container container-flex">
   <main role="main">
-
     <article class="article-featured">
       <h2 class="article-title">Finding simplicity in life</h2>
       <img src="../../assets/1.jpg" alt="simple white desk on a white wall with a plant on the far right side" class="article-image">
@@ -30,7 +29,6 @@
       <p class="article-body"><strong>Life can get complicated really quickly</strong>, but it doesn't have to be! There are many ways to simplify your life, <a href="#">a few of which we've explored in the past</a>. This week we're taking a bit of a approach though, in how you can find simplicity in the life you already living.</p>
       <a href="#" class="article-read-more">CONTINUE READING</a>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">How to keep your cooking simple </h2>
@@ -42,7 +40,6 @@
         <p class="article-info">July 19, 2019 | 3 comments</p>
       </div>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">Simplicity and work </h2>
@@ -54,7 +51,6 @@
         <p class="article-info">July 12, 2019 | 3 comments</p>
       </div>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">Simple decorations</h2>
@@ -67,15 +63,12 @@
       </div>
     </article>
   </main>
-
   <aside class="sidebar">
-
     <div class="sidebar-widget">
       <h2 class="widget-title">ABOUT ME</h2>
       <img src="../../assets/2.jpg" alt="john doe" class="widget-image">
       <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
     </div>
-
     <div class="sidebar-widget">
       <h2 class="widget-title">RECENT POSTS</h2>
       <div class="widget-recent-post">
@@ -91,18 +84,11 @@
         <img src="../../assets/3.jpg" alt="a green plant in a clear, round vase with water in it" class="widget-image">
       </div>
     </div>
-
   </aside>
-
 </div>
-
-
 <footer>
   <p><strong>Living the Simple Life</strong></p>
   <p>Copyright 2019</p>
 </footer>
-
-
-
 </body>
 </html>
