--- a/src/app/responsive1/recent-posts.html
+++ b/src/app/responsive1/recent-posts.html
@@ -17,12 +17,11 @@
         <li><a class="current-page" href="recent-posts.html">Recent posts</a></li>
       </ul>
     </nav>
-  </div> <!-- / .container -->
+  </div>
 </header>
 
 <div class="container container-flex">
   <main role="main">
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">Finding simplicity in life</h2>
@@ -34,7 +33,6 @@
         <p class="article-info">July 23, 2019 | 3 comments</p>
       </div>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">How to keep your cooking simple </h2>
@@ -46,7 +44,6 @@
         <p class="article-info">July 19, 2019 | 3 comments</p>
       </div>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">Simplicity and work </h2>
@@ -58,7 +55,6 @@
         <p class="article-info">July 12, 2019 | 3 comments</p>
       </div>
     </article>
-
     <article class="article-recent">
       <div class="article-recent-main">
         <h2 class="article-title">Simple decorations</h2>
@@ -71,15 +67,12 @@
       </div>
     </article>
   </main>
-
   <aside class="sidebar">
-
     <div class="sidebar-widget">
       <h2 class="widget-title">ABOUT ME</h2>
       <img src="../../assets/2.jpg" alt="john doe" class="widget-image">
       <p class="widget-body">I find life better, and I'm happier, when things are nice and simple.</p>
     </div>
-
     <div class="sidebar-widget">
       <h2 class="widget-title">RECENT POSTS</h2>
       <div class="widget-recent-post">
@@ -95,18 +88,11 @@
         <img src="../../assets/3.jpg" alt="a green plant in a clear, round vase with water in it" class="widget-image">
       </div>
     </div>
-
   </aside>
-
 </div>
-
-
 <footer>
   <p><strong>Living the Simple Life</strong></p>
   <p>Copyright 2019</p>
 </footer>
-
-
-
 </body>
 </html>
