--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -8,7 +8,6 @@
     <label for="searchInput">Search Users</label>
     <input id="searchInput" type="text">
   </div>
-
   <ul id="results">
     <li class="name">Karl</li>
     <li class="name">Per</li>
@@ -19,8 +18,7 @@
     <li class="name">Kurt</li>
     <li class="name">Fred</li>
   </ul>
-
 </div>
-<script src="index.pack.js"></script>
+<script src="search-bar.component.ts"></script>
 </body>
 </html>
