--- a/src/app/carousel/carousel.component.html
+++ b/src/app/carousel/carousel.component.html
@@ -20,6 +20,6 @@
     </div>
   </div>
 
-  <script src="index.pack.js"></script>
+  <script src="carousel.component.ts"></script>
   </body>
 </html>
