--- a/src/app/chrome/chrome.component.html
+++ b/src/app/chrome/chrome.component.html
@@ -9,6 +9,6 @@
 <button id="tab-btn">SAVE TAB</button>
 <button id="delete-btn">DELETE ALL</button>
 <ul id="ul-el"></ul>
-<script src="index.js"></script>
+<script src="chrome.component.ts"></script>
 </body>
 </html>
