--- a/src/app/pacman/pacman.component.html
+++ b/src/app/pacman/pacman.component.html
@@ -5,6 +5,6 @@
 <body>
 <h3>Score:<span id="score"></span></h3>
 <div class="grid"></div>
-<script src="index.pack.js"></script>
+<script src="pacman.component.ts"></script>
 </body>
 </html>
