--- a/src/app/responsive1/about-me.html
+++ b/src/app/responsive1/about-me.html
@@ -17,28 +17,23 @@
         <li><a href="recent-posts.html">Recent posts</a></li>
       </ul>
     </nav>
-  </div> <!-- / .container -->
+  </div>
 </header>
 
 <div class="container container-flex">
   <main role="main">
     <img src="../../assets/3.jpg" class="image-full">
     <h2>My name is John and living the simple life saved my life</h2>
-
     <p><strong>I used to be a pack rat</strong>. I had so many things that I thought that I loved, but the truth was I couldn't even appreciate any of it because there was too much.</p>
     <p>Things were terrible. I had a job that I hated, a home that I didn't want to live in, and I couldn't hold a relationship.</p>
-
     <h3>How I turned things around</h3>
     <p><strong>I was on the verge of a breakdown when I got rid of everything</strong>. I literally put 90% of my possessions in the garbage, sold my place and moved into a smaller apartment, and I quit my job.</p>
     <p>It wasn't easy at all, but everything around me was in such a bad place, I didn't know what else to do. And it worked.</p>
-
     <h3>Now I live the simple life</h3>
     <p>Now that I'm living a simple life, things are so much better. I'm less stressed, enjoy life and work more, and I have more free time to enjoy.</p>
     <p>With how much it turned my life around, <strong>I felt like I had no choice but to start sharing how I did it</strong>, and how others can benefit from living a simple life as well, which is why I started this site!</p>
   </main>
-
   <aside class="sidebar">
-
     <div class="sidebar-widget">
       <h2 class="widget-title">RECENT POSTS</h2>
       <div class="widget-recent-post">
@@ -54,18 +49,11 @@
         <img src="../../assets/3.jpg" alt="a green plant in a clear, round vase with water in it" class="widget-image">
       </div>
     </div>
-
   </aside>
-
 </div>
-
-
 <footer>
   <p><strong>Living the Simple Life</strong></p>
   <p>Copyright 2019</p>
 </footer>
-
-
-
 </body>
 </html>
