successfully completed dashboard chrome extension

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,1 +1,21 @@
-<p>dashboard works!</p>
+<html>
+<head>
+  <meta charset="UTF-8" />
+  <link href="dashboard.component.css" rel="stylesheet">
+  <title>Personal Dashboard</title>
+</head>
+<body>
+<main>
+  <div class="top">
+    <div id="crypto">
+      <div id="crypto-top"></div>
+    </div>
+    <div id="weather"></div>
+  </div>
+
+  <h1 id="time" class="time"></h1>
+  <p id="author"></p>
+</main>
+<script src="dashboard.component.ts"></script>
+</body>
+</html>
